[tool.poetry]
name = "repl_python3_CAPS-Thing-1"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.7.3"
python-dotenv = "^0.19.2"
Flask = "^2.0.2"
guild = "^1.1.4"
nextcord = "^2.0.0-alpha.6"
math1 = "^1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
